# su3_bench

./: .gitignore  CMakeLists.txt  Makefile.cuda  Makefile.dpc++  Makefile.dpcpp  Makefile.hip  Makefile.hipsycl  Makefile.kmm  Makefile.kokkos  Makefile.openacc  Makefile.opencl  Makefile.openmp  Makefile.openmp-cpu  Makefile.openmp_cpu  Makefile.sycl  Makefile.sycl-ptx  Makefile.sycl.ptx  README.md  k_mat_nn.cl  lattice.hpp  mat_nn_cuda.hpp  mat_nn_cuda_kernel.cu  mat_nn_cuda_kernel_kmm.cu  mat_nn_dpcpp.hpp  mat_nn_hip.hpp  mat_nn_hip_kernel.cpp  mat_nn_kmm.hpp  mat_nn_kokkos.hpp  mat_nn_openacc.hpp  mat_nn_opencl.hpp  mat_nn_opencl_kernel.cpp  mat_nn_openmp.hpp  mat_nn_openmp2.hpp  mat_nn_raja.hpp  mat_nn_sycl.hpp  mat_nn_sycl_linearize.hpp  su3.h  su3.hpp  su3_nn_bench.cpp
c++/: Makefile  Makefile.corigpu  Makefile.iris  Makefile.odinson  c99_su3_inline.hpp  lattice.hpp  m_mat_nn.hpp  make_lattice.cpp  mult_su3_nn_bench.cpp
c++_complex/: Makefile  lattice.hpp  mult_su3_nn_bench.cpp  su3.hpp
c99/: Makefile  Makefile.corigpu  Makefile.iris  Makefile.odinson  make_lattice.c  mult_su3_nn_bench.c  mysecond.c  run-bench.sh
c99/unimplemented/: mult_adj_su3_mat_vec_bench.c  mult_su3_mat_vec_sum_bench.c  scalar_mult_add_su3_vector_bench.c
c99_complex/: Makefile  c99_su3_inline.h  lattice.h  make_lattice.c  mult_su3_mat_vec_bench.c  mult_su3_nn_bench.c  su3.h
cuda/: Makefile  lattice.hpp  make_lattice.cu  mult_su3_nn_bench.cu  run-roofline.sh  run-sweep.sh  su3.hpp
opencl/: Makefile  Makefile.corigpu  Makefile.iris  Makefile.odinson  Makefile.pocl  lattice.h  lattice.hpp  m_mat_nn.cl  make_lattice.cpp  mult_su3_nn_bench.cpp  su3.hpp  sweep.sh
sycl/: Makefile  Makefile.computecpp  Makefile.dpc++  Makefile.hipsycl  Makefile.pocl  lattice.hpp  make_lattice.cpp  mult_su3_nn_bench.cpp
tuning/: tuning_common.py  tuning_cuda.py  tuning_hip.py  tuning_openacc.py  tuning_opencl.py  tuning_openmp.py
utilities/: run-nsight.sh
